--- a/.github/workflows/webapp.yml
+++ b/.github/workflows/webapp.yml
@@ -1,17 +1,10 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-# building and deploying a Jekyll site to GitHub Pages
+# Simple workflow for deploying static content to GitHub Pages
 name: Bridges program web app
 
 on:
   # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
-    paths:
-      - '**'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -29,29 +22,25 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-    # Build job
-  build:
+  # Single deploy job since we're just deploying
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          lfs: 'true'
-      - name: Setup Ruby
-        # https://github.com/ruby/setup-ruby/releases/tag/v1.207.0
-        uses: ruby/setup-ruby@4a9ddd6f338a97768b8006bf671dfbad383215f4
-        with:
-          ruby-version: '3.1' # Not needed with a .ruby-version file
-          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-          cache-version: 0 # Increment this number if you need to re-download cached gems
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
       - name: Download official program
         run: |
           wget -O official-program.html https://www.bridgesmathart.org/b2025/bridges-2025-program/
-      - name: Build with Jekyll
-        # Outputs to the './_site' directory by default
-        run: |
-          bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
-          find _site
-        env:
-          JEKYLL_ENV: production
-
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          # Upload entire repository
+          path: '.'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
