--- a/.github/workflows/webapp.yml
+++ b/.github/workflows/webapp.yml
@@ -6,6 +6,12 @@ on:
   push:
     branches: ["main"]
 
+  schedule:
+    # Runs once daily at 4 AM UTC
+    - cron: '0 4 * * *'
+    # Runs at 6 AM, 12 PM, 6 PM, and 12 AM UTC
+    #- cron: '0 6,12,18,0 * * *'
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
