--- a/.github/workflows/webapp.yml
+++ b/.github/workflows/webapp.yml
@@ -7,8 +7,8 @@ on:
     branches: ["main"]
 
   schedule:
-    # Runs once daily at 4 AM UTC
-    - cron: '0 4 * * *'
+    # Runs once daily at 16:06 UTC
+    - cron: '6 16 * * *'
     # Runs at 6 AM, 12 PM, 6 PM, and 12 AM UTC
     #- cron: '0 6,12,18,0 * * *'
 
