--- a/.github/workflows/webapp.yml
+++ b/.github/workflows/webapp.yml
@@ -6,9 +6,9 @@ on:
   push:
     branches: ["main"]
 
-  schedule:
+  #schedule:
     # Runs at 6 AM, 12 PM, 6 PM, and 12 AM UTC
-    - cron: '0 6,12,18,0 * * *'
+    #- cron: '0 6,12,18,0 * * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
